<resources>
    <string name="app_name">Андрей Цвирко</string>
    <string name="green_button">Green button</string>
    <string name="red_button">Red button</string>


    <!-- Content titles -->
    <string name="rating">Рейтинг</string>
    <string name="num_of_code_strings">Написано строк кода</string>
    <string name="projects">Проектов</string>
    <string name="phone">Мобильный</string>
    <string name="email">E-mail</string>
    <string name="VK_profile">Профиль в VK</string>
    <string name="repository">Репозиторий</string>
    <string name="about_myself">О себе</string>
    <string name="my_profile">Профиль</string>
    <string name="contacts">Команды</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog.gallery">Загрузить из галереи</string>
    <string name="user_profile_dialog.camera">Сделать снимок</string>
    <string name="user_profile_dialog.cancel">Отменить</string>
    <string name="user_profile_dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.choose.message">выберите фото</string>
    <string name="chooser_title_dial">Выберите программу дозвона:</string>
    <string name="chooser_title_sendEmail">Выберите почтовый клиент:</string>
    <string name="chooser_title_openBrowser">Выберите браузер:</string>
    <string name="snackbar_give_permissions">Необходимо дать разрешения</string>
    <string name="snackbar_give_permissions_button">Разрешить</string>
    <string name="password">Пароль</string>
    <string name="login_card_title">ВОЙТИ</string>
    <string name="login_button">ВОЙТИ</string>
    <string name="login_forgot_password">Забыли пароль?</string>
    <string name="validate_user_phone_error">Шаблон: От 11 до 20 цифр</string>
    <string name="validate_user_email_error">Шаблон: email@email.com</string>
    <string name="validate_user_vk_error">Шаблон: vk.com/abc</string>
    <string name="validate_user_github_error">Шаблон: github.com/abc</string>
    <string name="need_camera_permissions">Дайте разрешения приложению для работы с камерой</string>
    <string name="need_write_to_external_storage_permissions">Дайте приложению права на запись во внешнее хранилище</string>
    <string name="error_create_file">Произошла ошибка создания файла</string>

    <string name="bio_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>


    <!--Fonts-->
    <string name="ff_medium">sans-serif-medium</string>
    <string name="more_info_btn">Просмотр</string>
    <string name="logout">Выход</string>
    <string name="query_hint">Введите Имя пользователя</string>
    <string name="user_list_activity_title">DevIntesive Crew</string>

</resources>
