<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_small_8"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/corner_radius_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.views.AspectRatioImageView
                android:id="@+id/user_photo_rv_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/user_bg"
                app:aspect_ratio="1.78"
                />

            <TextView
                android:id="@+id/user_full_name_rv_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@string/ff_medium"
                android:paddingBottom="@dimen/spacing_medial_24"
                android:paddingLeft="@dimen/spacing_normal_16"
                android:paddingRight="@dimen/spacing_normal_16"
                android:text="Фамилия Имя"
                android:textColor="@color/white"
                android:textSize="@dimen/font_huge_24"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_big_72"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >


            <LinearLayout
                android:layout_width="@dimen/size_zero_0"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rating_rv_tv"
                    style="@style/header_tv.rv"
                    android:text="0"

                    />

                <TextView
                    style="@style/header_tv.rv.sub"
                    android:text="@string/rating"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/size_zero_0"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/code_lines_rv_tv"
                    style="@style/header_tv.rv"
                    android:text="0"

                    />

                <TextView
                    style="@style/header_tv.rv.sub"
                    android:text="@string/num_of_code_strings"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/size_zero_0"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/projects_rv_tv"
                    style="@style/header_tv.rv"
                    android:text="0"

                    />

                <TextView
                    style="@style/header_tv.rv.sub"
                    android:text="@string/projects"
                    />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/bio_rv_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/ff_medium"
            android:maxLines="3"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:paddingRight="@dimen/spacing_normal_16"
            android:text="@string/bio_dummy"
            android:textColor="@color/grey"
            android:textSize="@dimen/font_medium_14"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_1"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:background="@color/grey_light"
            />

        <Button
            android:id="@+id/more_info_rv_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_button_6"
            android:layout_marginBottom="@dimen/spacing_button_6"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:paddingRight="@dimen/spacing_normal_16"
            android:text="@string/more_info_btn"
            android:textColor="@color/color_accent"
            />


    </LinearLayout>

</android.support.v7.widget.CardView>
