<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:paddingLeft="@dimen/spacing_larger_72"
    android:paddingRight="@dimen/spacing_larger_72"
    tools:context="com.softdesign.devintensive.ui.activities.AuthActivity"
    >


    <android.support.v7.widget.CardView

        android:id="@+id/authorization_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/corner_radius_2"
        app:cardElevation="@dimen/card_elevation_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_medial_28"
            android:paddingTop="@dimen/spacing_medial_28"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal"
                >

                <View
                    android:id="@+id/login_indicator"
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="24dp"
                    android:background="@color/color_accent"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="left"
                    android:text="@string/login_card_title"
                    android:textColor="@color/color_accent"
                    android:textSize="@dimen/font_huge_20"
                    />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/login_spacing"
                >

                <EditText
                    android:id="@+id/login_email"
                    style="@style/infoField_et.loginField_et"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="email@email.ru"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/login_spacing"
                >

                <EditText
                    android:id="@+id/login_password"
                    style="@style/infoField_et.loginField_et"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/login_button_btn"
                android:layout_width="@dimen/button_login_width_125"
                android:layout_height="@dimen/button_login_height_36"
                android:layout_marginTop="@dimen/spacing_medial_28"
                android:background="@drawable/rounded_corners_btn"
                android:gravity="center"
                android:text="@string/login_button"
                android:textSize="@dimen/font_medium_14"
                android:theme="@style/AppTheme.Button.Red"
                />


            <TextView
                android:id="@+id/forgot_password_btn"
                android:layout_width="@dimen/button_login_width_125"
                android:layout_height="@dimen/button_forgot_password_height_16"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:gravity="center_horizontal"
                android:text="@string/login_forgot_password"
                android:textSize="@dimen/font_medium_14"
                />

        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>